@@ -2,6 +2,7 @@ rm -r build/
 mkdir build/
 g++ src/csv_to_root.cxx $(root-config --cflags --libs) -o ./build/csv_to_root
 g++ src/climate.cxx $(root-config --cflags --libs) -o ./build/climate
+g++ src/sweden_average.cxx $(root-config --cflags --libs) -o ./build/sweden_average
 
 ./bash/clean.sh
 
@@ -11,5 +12,7 @@ for city in datasets/clean/*.csv; do
     ./build/climate $(basename "$city" .csv).csv
 done
 
+./build/sweden_average
 ./bash/csv_root.sh 
 
+# rm ./datasets/Climate/*.csv
