@@ -37,3 +37,9 @@ YYYY-MM-DD Name LastName  <email@somewhere>
 	climate shift analysis
 
 	* started the analysis for the climate effects on the temperature.
+
+2025-10-28 Lukas Nord
+	climate shift analysis might be done
+
+	* Plots of the change in maximum and minimum temps for each city and for the entire country.
+	* Plots of the change in average temps for each city and for the entire country.
